tests/ui/struct-expressions/struct-expression.stderr
error[E0784]: union expressions should have exactly one field
  --> $DIR/union-struct-expression.rs:17:34
   |
LL |     let mut new_union = unsafe { MyUnion { ..base_named_union } }; 
   |                                  ^^^^^^^

error[E0436]: functional record update syntax requires a struct
  --> $DIR/union-struct-expression.rs:17:46
   |
LL |     let mut new_union = unsafe { MyUnion { ..base_named_union } }; 
   |                                              ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0436, E0784.
For more information about an error, try `rustc --explain E0436`.
